dark mode styling fix

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -451,3 +451,7 @@
     opacity: 0.5;
   }
 }
+
+.dark-mode .has-tooltip-arrow img {
+  filter: invert(1);
+}
